--- a/payroll/employee/poe.html
+++ b/payroll/employee/poe.html
@@ -104,11 +104,11 @@
 			 <p>The POE is <strong>determined by</strong>:</p>
 			 
 			<ul>
-	                         <li>the type of income</li>
-				 <li>the residency status of the employee</li>
-				 <li>the establishment of the employer where the employee reports for work</li>
+	                         <li>The type of income</li>
+				 <li>The residency status of the employee</li>
+				 <li>The establishment of the employer where the employee reports for work</li>
 		   </ul>
-<p>For income tax, CPP and EI withholding purposes, an <strong>establishment of the employer</strong> is any place or premises in Canada that is owned, leased or rented by an employer where employees report to work or from which employees are paid. For purposes of the POE, this <strong>does not need to be a permanent physical location</strong>.</p>
+<p>For income tax, CPP and EI withholding purposes, an <strong>establishment of the employer</strong> is any place or premises in Canada that is owned, leased or rented by this employer where employees report to work or from which employees are paid. For purposes of the POE, this <strong>does not need to be a permanent physical location</strong>.</p>
 <details><summary>Examples of temporary physical locations</summary>
  <div class="table-responsive">
                <table class="table small table-condensed" id="tb1">
@@ -324,11 +324,8 @@
               <details>
                 <summary>Ask the CRA for a binding determination on residency status</summary>
                 <p>Individuals may ask the Income Tax Rulings Directorate (ITRD) to issue a binding advance income tax ruling about their residency status. You may have to pay a fee for ITRD to issue the ruling.</p>
-                <p>Learn more on how to ask for an advance income tax ruling:</p>
-                <ul>
-                  <li> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/ic70-6.html">Information Circular IC 70-6R12, Advance Income Tax Rulings and Technical Interpretations</a></li>
-                  <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/tax-professionals/income-tax-rulings-interpretations.html">Income tax rulings and technical interpretations</a></li>
-                </ul>
+                <p>Learn more on how to ask for an advance income tax ruling: <a href="https://www.canada.ca/en/revenue-agency/services/tax/tax-professionals/income-tax-rulings-interpretations.html">Income tax rulings and technical interpretations</a></p>
+               
               </details>
             </div>
           </details>
