--- a/payroll/employee/poe.html
+++ b/payroll/employee/poe.html
@@ -368,7 +368,7 @@
 </ul>
 <p>The <strong>employer and the employee must be able to justify</strong> that a full-time remote work agreement was made.</p>
 
-<p>For the purposes of this policy, the term <strong>“employee”</strong> includes teleworkers as well as <strong>all</strong> employees who never have to report to an establishment of their employer, such as traveling representatives.</p> 
+<p>For the purposes of this policy, the term <strong>“employee”</strong> refers to an employee who <strong>does not have to report for work at an establishment of their employer</strong>, such as a full-time teleworker or a travelling representative.</p> 
 </div>
            
            
