--- a/payroll/employee/poe.html
+++ b/payroll/employee/poe.html
@@ -374,9 +374,9 @@
            
      <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the employee is reasonably considered to work remotely full-time, the <strong>new CRA administrative policy applies</strong>. </p>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you determine that a full-time remote work agreement was made, the <strong>new CRA administrative policy applies</strong>. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: Step 2 - Determine if the employee is reasonably considered to be "attached to an establishment of the employer"</p></li>
-	<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the employee is <strong>not</strong> reasonably considered to work remotely full-time, the new CRA administrative policy <strong>does not</strong> apply. </li>
+	<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If you determine that a full-time remote work agreement was <strong>not</strong> made, the new CRA administrative policy <strong>does not</strong> apply. </li>
 
 </ul>
  </details></li>
@@ -390,7 +390,7 @@
 <p>The primary indicator to determine if an employee can reasonably be considered "attached to an establishment of the employer" is whether the employee would physically come to work to carry out the functions related to their employment duties at that establishment, if it was not for the full-time remote work agreement. </p>
 <p>For employees who physically reported to an establishment of the employer <strong>immediately before </strong>entering a full-time remote work agreement, that establishment is the one to which they would be reasonably considered to be attached, unless the employee's circumstances or the nature of their duties have changed.</p>
 <h4>Secondary indicators </h4>
-<p>The following secondary indicators can assist you to determine the establishment of the employer where the employee, if it was not for the full-time remote working agreement, would physically come to work to carry out the functions related to their employment duties:<p>
+<p>The following secondary indicators can assist you to determine the establishment of the employer where the employee, if it was not for the full-time remote work agreement, would physically come to work to carry out the functions related to their employment duties:<p>
 <ol>
 <li>The establishment where the employee attends or would attend in-person meetings, through any type of communication </li>
 <li>The establishment where the employee receives or would receive work-related material or equipment or associated instructions and assistance</li>
@@ -485,7 +485,7 @@
               <summary><span id="res">Situation: Employee reports for work (physically or is considered attached) to <strong>only 1 establishment</strong> of the employer in Canada</span> <span class="label label-warning">New CRA administrative policy</span></summary>
             
 		
-                <p>The POE is where the <strong>employee reports for work or is considered attached</strong>.</p>
+                <p>The POE is where the <strong>employee physically reports for work or is considered attached</strong>.</p>
                 <p>Where the employee reports in person, there is <strong>no</strong> minimum amount of time the employee has to report to that place.</p>
  <div id="ajax-resultperson1">   
              <p>Use:</p>
