--- a/payroll/employee/poe.html
+++ b/payroll/employee/poe.html
@@ -495,7 +495,8 @@
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Appropriate payroll deductions tables</a></li>
                 </ul>
                 <p><strong>Reminder:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
-      
+      <p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
+<p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
           
 	 </div>
 
@@ -515,12 +516,14 @@
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Appropriate payroll deductions tables</a></li>
                 </ul>
                 <p><strong>Reminder:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
+		      <p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
+<p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
               </div>
             </details>
             <details>
               <summary>Situation: Employee works in Canada but <strong>does not</strong> report for work (never physically and not considered attached under the new CRA administrative policy) at an establishment of the employer</summary>
               <div id="ajax-resultresnot1">
-                <p>The POE is the province or territory where the employer's <strong>establishment is located</strong> from which the employee's <strong>salary is paid</strong>. This is normally the location of the employer’s payroll department or payroll records.</p>
+                <p>The POE is the province or territory where the <strong>establishment of the employer is located</strong> from which the employee's <strong>salary is paid</strong>. This is normally the location of the employer’s payroll department or payroll records.</p>
                 <p>Use:</p>
                 <ul class="fa-ul">
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/filing-form-td1.html#h-1">TD1 federal form</a></li>
@@ -528,6 +531,10 @@
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Appropriate payroll deductions tables</a></li>
                 </ul>
                 <p><strong>Reminder:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
+<p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
+<p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
+
+
               </div>
             </details>
             <details>
