--- a/payroll/employee/poe.html
+++ b/payroll/employee/poe.html
@@ -544,7 +544,7 @@
                 <p>Use:</p>
                 <ul class="fa-ul">
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/filing-form-td1.html#h-1">TD1 federal form</a></li>
-                  <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Payroll deductions tables for <strong>In Canada beyond the limits of any province/territory or outside Canada </strong></a></li>
+                  <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/payroll/t4008-payroll-deductions-supplementary-tables/t4008oc-jan.html">Payroll deductions tables for <strong>In Canada beyond the limits of any province/territory or outside Canada </strong></a></li>
                 </ul>
                 <p>Do not use:</p>
                 <ul class="fa-ul">
@@ -599,13 +599,16 @@
                 <p>Use:</p>
                 <ul class="fa-ul">
                   <li><span class="fas fa-check text-success fa-li"></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/filing-form-td1.html#h-1">TD1 federal form</a></li>
-                  <li><span class="fas fa-check text-success fa-li"></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Payroll deductions tables for <strong>In Canada beyond the limits of any province/territory or outside Canada </strong></a></li>
+                  <li><span class="fas fa-check text-success fa-li"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/payroll/t4008-payroll-deductions-supplementary-tables/t4008oc-jan.html">Payroll deductions tables for <strong>In Canada beyond the limits of any province/territory or outside Canada </strong></a></li>
                 </ul>
                 <p>Do not use:</p>
                 <ul class="fa-ul">
                   <li><span class="fas fa-times text-danger fa-li"></span> TD1 provincial and territorial form </li>
                 </ul>
                 <p class="mrgn-tp-xl">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/individuals-leaving-entering-canada-non-residents/deemed-residents.html#dmdrsdnt">Deemed residents of Canada</a></p>
+<p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
+<p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
+
               </div>
             </details>
           </details>
