--- a/payroll/employee/poe.html
+++ b/payroll/employee/poe.html
@@ -156,7 +156,7 @@
                     <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "isoptional": true}'>
                       <div class="wb-fieldflow-header">
                         <div class="brdr-tp">
-                          <p class="gc-font-2019 mrgn-tp-md">Where the income is from employment, you need to consider the employee or the employer residency status.</p>
+                          <p class="gc-font-2019 mrgn-tp-md">Where the income is from employment, you need to consider the employee's or the employer's residency status.</p>
                         </div>
                         <p class="wb-fieldflow-label">What is the residency status?</p>
                         <p><a href="#residency" aria-controls="residency" class="overlay-lnk" role="button">If you don't know the residency status&nbsp;<span class="far fa-question-circle"></span></a></p>
@@ -198,7 +198,7 @@
                                                                                                             
                                     </div>
 
-                                    <p class="wb-fieldflow-label">Based on the indicators to consider, can you determine if the employee is reasonably considered attached to a specific establishment of the employer? </p>
+                                    <p class="wb-fieldflow-label">Based on the indicators to consider, can you determine if the employee is reasonably considered attached to an establishment of the employer? </p>
 	<p> <a href="#attached2" aria-controls="centred-popup" class="overlay-lnk" role="button">Indicators to consider for the employee to be reasonably considered "attached to an establishment of the employer"&nbsp;<span class="far fa-question-circle"></span></a> </p>
                                   </div>
                                   <ul>
@@ -263,7 +263,7 @@
 
             <div id="ajax-confirma" class="alert alert-info hidden">
              <h3><small><span class="label label-warning">New CRA administrative policy</span> <br> Your POE result </small><br>
-                Employee is considered to work remotely full-time and is reasonably considered "attached to a specific establishment of the employer"</h3>
+                Employee is considered to work remotely full-time and is reasonably considered "attached to an establishment of the employer"</h3>
              
   <p><div data-ajax-replace="#ajax-notapply"></div> </p>
  <p><div data-ajax-replace="#ajax-warning"></div> </p>
