--- a/payroll/employee/poe.html
+++ b/payroll/employee/poe.html
@@ -494,7 +494,8 @@
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/filing-form-td1.html#h-1">TD1 provincial and territorial form</a></li>
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Appropriate payroll deductions tables</a></li>
                 </ul>
-                <p><strong>Reminder:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
+                <p><strong>Reminder:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
+<p>Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
       <p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
           
@@ -515,7 +516,8 @@
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/filing-form-td1.html#h-1">TD1 provincial and territorial form</a></li>
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Appropriate payroll deductions tables</a></li>
                 </ul>
-                <p><strong>Reminder:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
+                <p><strong>Reminder:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
+<p>Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
 		      <p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
               </div>
@@ -530,7 +532,8 @@
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/filing-form-td1.html#h-1">TD1 provincial and territorial form</a></li>
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Appropriate payroll deductions tables</a></li>
                 </ul>
-                <p><strong>Reminder:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
+                <p><strong>Reminder:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
+<p>Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
 <p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
 
