--- a/payroll/employee/poe.html
+++ b/payroll/employee/poe.html
@@ -525,7 +525,14 @@
             <details>
               <summary>Situation: Employee works in Canada but <strong>does not</strong> report for work (never physically and not considered attached under the new CRA administrative policy) at an establishment of the employer</summary>
               <div id="ajax-resultresnot1">
-                <p>The POE is the province or territory where the <strong>establishment of the employer is located</strong> from which the employee's <strong>salary is paid</strong>. This is normally the location of the employer’s payroll department or payroll records.</p>
+                <p>The POE is the province or territory where the <strong>establishment of the employer is located</strong> from which the employee's <strong>salary is paid</strong>. 
+<p>Generally, this is one of the following:</p>
+
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col">The location of the employer's payroll department or payroll records </li>
+<li class="cnjnctn-col">The establishment which actually incurs the expense for T2 reporting purposes </li>
+</ul>
+
                 <p>Use:</p>
                 <ul class="fa-ul">
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/filing-form-td1.html#h-1">TD1 federal form</a></li>
