--- a/payroll/employee/poe.html
+++ b/payroll/employee/poe.html
@@ -585,7 +585,10 @@
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Appropriate payroll deductions tables</a></li>
                 </ul>
                 <p class="mrgn-tp-xl">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/individuals-leaving-entering-canada-non-residents/deemed-residents.html#dmdrsdnt">Deemed residents of Canada</a></p>
-              </div>
+<p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
+<p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
+            
+  </div>
             </details>
             <details>
               <summary>Situation: Employee is a <strong>part-year resident</strong></summary>
