--- a/payroll/employee/poe.html
+++ b/payroll/employee/poe.html
@@ -494,7 +494,7 @@
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/filing-form-td1.html#h-1">TD1 provincial and territorial form</a></li>
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Appropriate payroll deductions tables</a></li>
                 </ul>
-                <p><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
+                <p class="mrgn-tp-lg"><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
 <p>Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
       <p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
@@ -516,7 +516,7 @@
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/filing-form-td1.html#h-1">TD1 provincial and territorial form</a></li>
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Appropriate payroll deductions tables</a></li>
                 </ul>
-                <p><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
+                <p class="mrgn-tp-lg"><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
 <p>Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
 		      <p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
@@ -539,7 +539,7 @@
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/filing-form-td1.html#h-1">TD1 provincial and territorial form</a></li>
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Appropriate payroll deductions tables</a></li>
                 </ul>
-                <p><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
+                <p class="mrgn-tp-lg"><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
 <p>Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
 <p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
@@ -584,8 +584,8 @@
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/set-up-new-employee/filing-form-td1.html#h-1">TD1 provincial and territorial form</a></li>
                   <li><span class="fas fa-check text-success fa-li "></span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-online-calculator-pdoc-payroll-tables-td1s.html">Appropriate payroll deductions tables</a></li>
                 </ul>
-                <p class="mrgn-tp-xl">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/individuals-leaving-entering-canada-non-residents/deemed-residents.html#dmdrsdnt">Deemed residents of Canada</a></p>
-<p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
+                <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/individuals-leaving-entering-canada-non-residents/deemed-residents.html#dmdrsdnt">Deemed residents of Canada</a></p>
+<p class="mrgn-tp-lg"><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
             
   </div>
@@ -618,8 +618,8 @@
                 <ul class="fa-ul">
                   <li><span class="fas fa-times text-danger fa-li"></span> TD1 provincial and territorial form </li>
                 </ul>
-                <p class="mrgn-tp-xl">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/individuals-leaving-entering-canada-non-residents/deemed-residents.html#dmdrsdnt">Deemed residents of Canada</a></p>
-<p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
+                <p class="mrgn-tp-lg">Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents/individuals-leaving-entering-canada-non-residents/deemed-residents.html#dmdrsdnt">Deemed residents of Canada</a></p>
+<p class="mrgn-tp-lg"><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
 
               </div>
