--- a/payroll/employee/poe.html
+++ b/payroll/employee/poe.html
@@ -496,7 +496,7 @@
                 </ul>
                 <p class="mrgn-tp-lg"><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
 <p>Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
-      <p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
+      <p class="mrgn-tp-lg"><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
           
 	 </div>
@@ -518,7 +518,7 @@
                 </ul>
                 <p class="mrgn-tp-lg"><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
 <p>Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
-		      <p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
+		      <p class="mrgn-tp-lg"><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
               </div>
             </details>
@@ -541,7 +541,7 @@
                 </ul>
                 <p class="mrgn-tp-lg"><strong>POE different from province of residence:</strong> If the employee's POE is not the same as their province or territory of residence, they may have not enough or too much tax deducted. </p>
 <p>Learn more: <a href="/cra-arc/payroll/employee/changes.html">Increase or reduce income tax deducted at source.</a> </p>
-<p><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
+<p class="mrgn-tp-lg"><strong>POE in Quebec</strong>: If you have employees whose province of employment is Quebec, regardless of your employee's province or territory of residence, you have to deduct QPP contributions instead of CPP contributions as well as QPIP contributions.</p>
 <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
 
 
