--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -326,7 +326,7 @@
 <p><strong>Do not</strong> enter your payroll account on the copies you give to the recipients.</p>
                 </details>           
 
- <details><summary id="bx_15"><span class="label label-warning">New - For T4A slips filed on or after calendar year 2024</span> Box 015 – Dental plan offered to recipients</summary>
+ <details><summary id="bx_15"><span class="label label-warning">New - For T4A slips filed on or after calendar year 2024</span> Box 015 – Payer-offered dental benefits (PODB)</summary>
 <p>For T4A slips filed on or after calendar year 2024, if you <strong>provided access to any dental care insurance or for coverage of dental services of any kind</strong> to a recipient, enter the appropriate code from the following list to indicate the level of access to services you provided:</p>
 
     
