--- a/payroll/file/t4anrsum.html
+++ b/payroll/file/t4anrsum.html
@@ -213,7 +213,7 @@
 </details>
 
 <details><summary id="h_0_3">Name and address of payer</summary>
-<p>Enter your operating or trading name, and address.</p>
+<p>Enter your legal name, your operating or trading name (if it differs from your legal name), and address.</p>
 </details>
 
 <details><summary id="h_0_4">Line 88 &ndash; Total number of T4A-NR slips filed</summary>
@@ -221,15 +221,15 @@
 </details>
 
 <details><summary id="h_0_5">Line 18 &ndash; Gross income</summary>
-<p>Add the amount in box 18 of all T4A-NR slips. Report the total on line 18.</p>
+<p>Add the amountd in box 18 of all T4A-NR slips. Report the total on line 18.</p>
 </details>
 
 <details><summary id="h_0_6">Line 20 &ndash; Travel expenses</summary>
-<p>Add the amount in box 20 of all T4A-NR slips. Report the total on line 20.</p>
+<p>Add the amountd in box 20 of all T4A-NR slips. Report the total on line 20.</p>
 </details>
 
 <details><summary id="h_0_7">Line 22 &ndash;Income tax deducted</summary>
-<p>Add the amount in box 22 of all T4A-NR slips. Report the total on line 22.</p>
+<p>Add the amountd in box 22 of all T4A-NR slips. Report the total on line 22.</p>
 </details>
 
 <details><summary id="h_0_8">Line 82 &ndash; Remittances</summary>
