--- a/payroll/file/t5018sum.html
+++ b/payroll/file/t5018sum.html
@@ -221,7 +221,7 @@
  </details> 
  <details>
   <summary >Payer's information</summary> 
-  <p>Enter your legal name, your trade name (if it differs from your legal name), and your complete business address.</p> 
+  <p>Enter your legal name, your operating or trading name (if it differs from your legal name), and address.</p> 
  </details> 
  <details>
   <summary >Language of correspondence</summary> 
@@ -233,7 +233,7 @@
  </details> 
  <details>
   <summary >Line 82 – Total construction subcontractor payments</summary> 
-  <p>Add the amount in box 22 of all T5018 slips. Report the total on line 82.</p> 
+  <p>Add the amounts in box 22 of all T5018 slips. Report the total on line 82.</p> 
  </details> 
  <details>
   <summary >Person to contact about this return</summary> 
