--- a/sred/scientific-research-experimental-development-tax-incentive-program/contact-us.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/contact-us.html
@@ -511,8 +511,8 @@
             <dd>
               <p>Canada Revenue Agency<br>
               Scientific Research and Experimental Development Division<br>
-              9737 King George Blvd<br>
-              Surrey BC&nbsp;  V3T&nbsp;5W6</p>
+              9755 King George Blvd<br>
+              Surrey BC&nbsp;  V3T&nbsp;5E1</p>
             </dd>            
               
             <dt>By fax:</dt>
