--- a/sred/scientific-research-experimental-development-tax-incentive-program/contact-us.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/contact-us.html
@@ -124,7 +124,7 @@
 <section id="select-1" class="hidden alert0 provisional">
 
 <h2>Alberta</h2>
-<p>For SR&ED services in Alberta, contact the Edmonton Tax Services Office.</p>
+<p>For SR&ED services in Alberta, contact the Fraser Valley and Interior Tax Services Office.</p>
 <h3>Edmonton Tax Services Office</h3>
 <dl class="dl-horizontal brdr-0">
             <dt>By phone:</dt>
@@ -133,7 +133,7 @@
 
                 <dl class="dl-horizontal mrgn-lft-0 brdr-0">
                   <dt style="clear: none; padding-top: 0px"><strong>Telephone number:</strong></dt>
-                  <dd style="padding-top: 0px"><p><a href="tel:18334460934" class="hidden-md hidden-lg nowrap"><span class="fas fa-phone fa-flip-horizontal"></span>1-866-578-4538<span class="wb-inv"> (opens up phone application)</span></a><strong class="hidden-xs hidden-sm nowrap"><span class="fas fa-phone fa-flip-horizontal"></span>1-866-578-4538</strong></p></dd>
+                  <dd style="padding-top: 0px"><p><a href="tel:18665784538" class="hidden-md hidden-lg nowrap"><span class="fas fa-phone fa-flip-horizontal"></span>1-866-578-4538<span class="wb-inv"> (opens up phone application)</span></a><strong class="hidden-xs hidden-sm nowrap"><span class="fas fa-phone fa-flip-horizontal"></span>1-866-578-4538</strong></p></dd>
                   <!--<dt><strong>TTY number:</strong></dt>
                   <dd>
                     <p><a href="tel:18006650354" class="hidden-md hidden-lg nowrap"><span class="fas fa-tty fa-flip-horizontal"></span>1-800-665-0354<span class="wb-inv"> (opens up tty application)</span></a><strong class="hidden-xs hidden-sm nowrap"><span class="fas fa-tty fa-flip-horizontal"></span>1-800-665-0354</strong></p>
@@ -171,8 +171,8 @@
             <dd>
               <p>Canada Revenue Agency<br>
               Scientific Research and Experimental Development Division<br>
-              10-9700 Jasper Ave<br>
-              Edmonton AB&nbsp;  T5J&nbsp;4C8</p>
+              9755 King George Blvd<br>
+              Surrey BC&nbsp;  V3T&nbsp;5E1</p>
             </dd>            
               
             <dt>By fax:</dt>
