--- a/sred/scientific-research-experimental-development-tax-incentive-program/contact-us.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/contact-us.html
@@ -125,7 +125,7 @@
 
 <h2>Alberta</h2>
 <p>For SR&ED services in Alberta, contact the Fraser Valley and Interior Tax Services Office.</p>
-<h3>Edmonton Tax Services Office</h3>
+<h3>Fraser Valley and Interior Tax Services Office</h3>
 <dl class="dl-horizontal brdr-0">
             <dt>By phone:</dt>
             <!-- open By phone container -->
@@ -195,7 +195,7 @@
 <section id="select-3" class="hidden alert0 provisional">
 <h2>Manitoba</h2>
 <p>For SR&ED services in Manitoba, contact the Fraser Valley and Interior Tax Services Office.</p>
-<h3>Edmonton Tax Services Office</h3>
+<h3>Fraser Valley and Interior Tax Services Office</h3>
 
 <dl class="dl-horizontal brdr-0">
             <dt>By phone:</dt>
@@ -330,8 +330,8 @@
 
 <section id="select-12" class="hidden alert0 provisional">
 <h2>Saskatchewan</h2>
-<p>For SR&ED services in Saskatchewan, contact the Edmonton Tax Services Office.</p>
-<h3>Edmonton Tax Services Office</h3>
+<p>For SR&ED services in Saskatchewan, contact the Fraser Valley and Interior Tax Services Office.</p>
+<h3>Fraser Valley and Interior Tax Services Office</h3>
 
 <dl class="dl-horizontal brdr-0">
             <dt>By phone:</dt>
@@ -340,7 +340,7 @@
 
                 <dl class="dl-horizontal mrgn-lft-0 brdr-0">
                   <dt style="clear: none; padding-top: 0px"><strong>Telephone number:</strong></dt>
-                  <dd style="padding-top: 0px"><p><a href="tel:18334460934" class="hidden-md hidden-lg nowrap"><span class="fas fa-phone fa-flip-horizontal"></span>1-866-578-4538<span class="wb-inv"> (opens up phone application)</span></a><strong class="hidden-xs hidden-sm nowrap"><span class="fas fa-phone fa-flip-horizontal"></span>1-866-578-4538</strong></p></dd>
+                  <dd style="padding-top: 0px"><p><a href="tel:18665784538" class="hidden-md hidden-lg nowrap"><span class="fas fa-phone fa-flip-horizontal"></span>1-866-578-4538<span class="wb-inv"> (opens up phone application)</span></a><strong class="hidden-xs hidden-sm nowrap"><span class="fas fa-phone fa-flip-horizontal"></span>1-866-578-4538</strong></p></dd>
                   
                   <dt>Hours:</dt>
                   <dd>
@@ -357,7 +357,7 @@
                       <tbody>
                         <tr>
                           <td>Monday to Friday</td>
-                          <td><strong>7&nbsp;am to 5&nbsp;pm</strong> (local time)</td>
+                          <td><strong>8&nbsp;am to 4&nbsp;pm</strong> (local time)</td>
                         </tr>
                         <tr>
                           <td>Saturday and Sunday</td>
@@ -375,8 +375,8 @@
             <dd>
               <p>Canada Revenue Agency<br>
               Scientific Research and Experimental Development Division<br>
-              10-9700 Jasper Ave<br>
-              Edmonton AB&nbsp;  T5J&nbsp;4C8</p>
+             9755 King George Blvd<br>
+             Surrey BC&nbsp;  V3T&nbsp;5E1</p>
             </dd>            
               
             <dt>By fax:</dt>
