--- a/sred/index.html
+++ b/sred/index.html
@@ -95,13 +95,13 @@
     Review the SR&amp;ED requirements and what types of work may be eligible. 
   </dd>
   <dt>
-    <a href="scientific-research-experimental-development-tax-incentive-program/how.html">How to prepare your SR&amp;ED claim</a>
+    <a href="scientific-research-experimental-development-tax-incentive-program/how.html">How to prepare your claim</a>
   </dt>
   <dd>
    Understand reporting deadlines, how to group your eligible work, and how to calculate your expenditures and investment tax credit (ITC). 
   </dd>
   <dt>
-    <a href="scientific-research-experimental-development-tax-incentive-program/how-submit.html">Submit your SR&amp;ED claim</a>
+    <a href="scientific-research-experimental-development-tax-incentive-program/how-submit.html">Submit your claim</a>
   </dt>
   <dd>
    How to submit your SR&amp;ED claim to the CRA. 
