--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
@@ -87,9 +87,9 @@
     </li>
     <li>
       <a href="how.html" class="hidden-xs hidden-sm">How to prepare your SR&amp;ED claim</a>
-      <a href="how.html#gc-document-nav" class="visible-xs visible-sm">How to prepare your SR&amp;ED claim</a>     
+      <a href="how.html#gc-document-nav" class="visible-xs visible-sm">How to prepare your claim</a>     
 	  	<ul>
-            <li><a href="get-ready.html" class="active" aria-current="page">Get ready to claim SR&amp;ED</a>
+            <li><a href="get-ready.html" class="active" aria-current="page">Get ready to claim</a>
             </li>
             <li><a href="grouping.html" class="hidden-xs hidden-sm">Group work into SR&amp;ED projects</a>
                 <a href="grouping.html#gc-document-nav" class="visible-xs visible-sm">Group work into SR&amp;ED projects</a> 
@@ -111,7 +111,7 @@
             </li>
          </ul>
     </li>
-    <li><a href="how-submit.html" class="hidden-xs hidden-sm">Submit your SR&amp;ED claim</a>
+    <li><a href="how-submit.html" class="hidden-xs hidden-sm">Submit your claim</a>
         <a href="how-submit.html#gc-document-nav" class="visible-xs visible-sm">Submit your SR&amp;ED claim</a> 
     </li>
     <li>
