--- a/sred/scientific-research-experimental-development-tax-incentive-program/how-submit.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/how-submit.html
@@ -85,10 +85,10 @@
       <a href="#gc-document-nav" class="visible-xs visible-sm">What work is eligible</a>
     </li>
     <li>
-      <a href="how.html" class="hidden-xs hidden-sm">How to prepare your SR&amp;ED claim</a>
-      <a href="how.html#gc-document-nav" class="visible-xs visible-sm">How to prepare your SR&amp;ED claim</a> 
+      <a href="how.html" class="hidden-xs hidden-sm">How to prepare your claim</a>
+      <a href="how.html#gc-document-nav" class="visible-xs visible-sm">How to prepare your claim</a> 
     </li>    
-    <li><a href="how-submit.html" class="active" aria-current="page">Submit your SR&amp;ED claim</a>
+    <li><a href="how-submit.html" class="active" aria-current="page">Submit your claim</a>
     </li>
     <li>
       <a href="after.html" class="hidden-xs hidden-sm">After you claim</a>
@@ -103,7 +103,7 @@
 </div>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Submit your SR&amp;ED claim</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Submit your claim</h1>
 
 <h2 class="h3">On this page</h2>
 <ul>
