--- a/payroll/calculate/when/index.html
+++ b/payroll/calculate/when/index.html
@@ -73,8 +73,8 @@
                         <li> <a href="cpprates.html" class="hidden-xs hidden-sm">CPP contribution rates, maximums and exemptions</a>
                            <a href="cpprates.html#gc-document-nav" class="visible-xs visible-sm">CPP contribution rates, maximums and exemptions</a>
                         </li>
-			 <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">CPP second contribution rates, maximums and exemptions <span class="label label-warning">In development</span> </a>
-                           <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">CPP second contribution rates, maximums and exemptions <span class="label label-warning">In development</span> </a>
+			 <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">CPP second (CPP2) contribution rates, maximums and exemptions <span class="label label-warning">In development</span> </a>
+                           <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">CPP second (CPP2) contribution rates, maximums and exemptions <span class="label label-warning">In development</span> </a>
                         </li>
 			     
                         <li> <a href="learnei.html" class="hidden-xs hidden-sm">About the deduction of EI premiums</a>
@@ -150,7 +150,7 @@
 <ul>
         <li>Learn about when to deduct CPP contributions, including when to start, stop or restart deducting them: <a href="learncpp.html">About the deduction of CPP contributions</a></li>
         <li>Find information about current and past CPP contribution rates, maximum contributions and annual pensionable earnings and exemption amounts (annual and per pay period): <a href="cpprates.html">CPP contribution rates, maximums and exemptions</a></li>
-        <li><span class="label label-warning">In development</span> Find information about CPP second contribution rates, maximum contributions and annual pensionable earnings and exemption amounts (annual and per pay period): <a href="cpp2rates.html">CPP second contribution rates, maximums and exemptions</a></li>
+        <li><span class="label label-warning">In development</span> Find information about CPP second (CPP2) contribution rates, maximum contributions and annual pensionable earnings and exemption amounts (annual and per pay period): <a href="cpp2rates.html">CPP second contribution rates, maximums and exemptions</a></li>
     
 </ul>  
 <h3>Employment Insurance (EI)</h3>
