--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>CPP second contribution rates, maximums and exemptions -  Calculate payroll deductions and contributions - Canada.ca</title>
+<title>CPP second (CPP2) contribution rates, maximums and exemptions -  Calculate payroll deductions and contributions - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <meta name="robots" content="noindex, follow">
 <!-- Meta data -->
@@ -77,7 +77,7 @@
                            <a href="cpprates.html#gc-document-nav" class="visible-xs visible-sm">CPP contribution rates, maximums and exemptions </a>
                         </li> 
 
-         <li> <a href="cpp2rates.html" class="active" aria-current="page">CPP second contribution rates, maximums and exemptions</a> <span class="label label-warning">In development</span> </li>
+         <li> <a href="cpp2rates.html" class="active" aria-current="page">CPP second (CPP2) contribution rates, maximums and exemptions</a> <span class="label label-warning">In development</span> </li>
 
 		<li> <a href="learnei.html" class="hidden-xs hidden-sm">About the deduction of EI premiums</a> <a href="learnei.html#gc-document-nav" class="visible-xs visible-sm">About the deduction of EI premiums</a> </li>
           <li> <a href="eirates.html" class="hidden-xs hidden-sm">EI premium rates and maximums</a> <a href="eirates.html#gc-document-nav" class="visible-xs visible-sm">EI premium rates and maximums</a> </li>
