--- a/sred/scientific-research-experimental-development-tax-incentive-program/how.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/how.html
@@ -74,10 +74,10 @@
       <a href="what-work.html" class="hidden-xs hidden-sm">What work is eligible</a>
       <a href="#gc-document-nav" class="visible-xs visible-sm">What work is eligible</a>
     </li>
-    <li><a href="how.html" class="active" aria-current="page">How to prepare your SR&amp;ED claim</a>
+    <li><a href="how.html" class="active" aria-current="page">How to prepare your claim</a>
     </li>
-    <li><a href="how-submit.html" class="hidden-xs hidden-sm">Submit your SR&amp;ED claim</a>
-        <a href="how-submit.html#gc-document-nav" class="visible-xs visible-sm">Submit your SR&amp;ED claim</a> 
+    <li><a href="how-submit.html" class="hidden-xs hidden-sm">Submit your claim</a>
+        <a href="how-submit.html#gc-document-nav" class="visible-xs visible-sm">Submit your claim</a> 
     </li>      
     <li>
       <a href="after.html" class="hidden-xs hidden-sm">After you claim</a>
@@ -99,7 +99,7 @@
              
 <ol class="lst-stps">
   <li>
-    <h3><a href="get-ready.html">Get ready to claim SR&ED</a></h3>
+    <h3><a href="get-ready.html">Get ready to claim</a></h3>
       <p>Understand how to claim, resources you’ll need, reporting deadlines, and which records to save</p>
   </li>
   <li>
