--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
@@ -86,7 +86,7 @@
       <a href="#gc-document-nav" class="visible-xs visible-sm">What work is eligible</a>
     </li>
     <li>
-      <a href="how.html" class="hidden-xs hidden-sm">How to prepare your SR&amp;ED claim</a>
+      <a href="how.html" class="hidden-xs hidden-sm">How to prepare your claim</a>
       <a href="how.html#gc-document-nav" class="visible-xs visible-sm">How to prepare your claim</a>     
 	  	<ul>
             <li><a href="get-ready.html" class="active" aria-current="page">Get ready to claim</a>
