--- a/payroll/calculate/when/learngsthst.html
+++ b/payroll/calculate/when/learngsthst.html
@@ -77,8 +77,8 @@
                         <li> <a href="cpprates.html" class="hidden-xs hidden-sm">CPP contribution rates, maximums and exemptions</a>
                            <a href="cpprates.html#gc-document-nav" class="visible-xs visible-sm">CPP contribution rates, maximums and exemptions</a>
                         </li>
-			      <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">CPP second contribution rates, maximums and exemptions <span class="label label-warning">In development</span> </a>
-                           <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">CPP second contribution rates, maximums and exemptions <span class="label label-warning">In development</span> </a>
+			      <li> <a href="cpp2rates.html" class="hidden-xs hidden-sm">CPP second (CPP2) contribution rates, maximums and exemptions <span class="label label-warning">In development</span> </a>
+                           <a href="cpp2rates.html#gc-document-nav" class="visible-xs visible-sm">CPP second (CPP2) contribution rates, maximums and exemptions <span class="label label-warning">In development</span> </a>
                         </li>
                         <li> <a href="learnei.html" class="hidden-xs hidden-sm">About the deduction of EI premiums</a>
                            <a href="learnei.html#gc-document-nav" class="visible-xs visible-sm">About the deduction of EI premiums</a>
