--- a/payroll/calculate/how/method.html
+++ b/payroll/calculate/how/method.html
@@ -89,8 +89,8 @@
                         <li><a href="cpp.html" class="hidden-xs hidden-sm">Calculate CPP deductions</a>
                            <a href="cpp.html#gc-document-nav" class="visible-xs visible-sm">Calculate CPP deductions</a> 
                         </li>
-			 <li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second CPP deductions <span class="label label-warning">In development</span></a>
-                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second CPP deductions <span class="label label-warning">In development</span></a> 
+			 <li><a href="cpp2.html" class="hidden-xs hidden-sm">Calculate second CPP (CPP2) deductions <span class="label label-warning">In development</span></a>
+                           <a href="cpp2.html#gc-document-nav" class="visible-xs visible-sm">Calculate second CPP (CPP2) deductions <span class="label label-warning">In development</span></a> 
                         </li>     
                         <li><a href="ei.html" class="hidden-xs hidden-sm">Calculate EI deductions</a>
                            <a href="ei.html#gc-document-nav" class="visible-xs visible-sm">Calculate EI deductions</a> 
@@ -169,8 +169,8 @@
                </li>
 		   <li>
                   <span class="fas fa-cogs text-muted fa-lg fa-li"></span> 
-                  <h3><a href="cpp2.html">Calculate second CPP contributions deductions</a></h3>
-                  <p><span class="label label-warning">New content in development</span> How to use the CPP contributions tables and how to calculate manually the amount to withhold on the second additional CPP contributions</p>
+                  <h3><a href="cpp2.html">Calculate second CPP (CPP2) contributions deductions</a></h3>
+                  <p><span class="label label-warning">New content in development</span> How to use the CPP2 contributions tables and how to calculate manually the amount to withhold on the CPP2 contributions</p>
                </li>   
 		    
                <li>
