--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -118,11 +118,15 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Calculate second CPP (CPP2) contributions deductions</h1>
+<div class="alert alert-warning">
+<p>Content is new and it is effective for deductions made <strong>on or after January 1, 2024</strong></p>
+</div>
+
  <div class="col-xs-12">
                <div class="row">
                   <p class="pull-left small"><strong>You may be looking for:</strong></p>
                   <ul class="pull-left mrgn-lft-md list-unstyled small">
-                     <li><a href="/cra-arc/payroll/calculate/when/cpp2rates.html">CPP second contribution rates, maximums and exemptions</a></li>
+                     <li><a href="/cra-arc/payroll/calculate/when/cpp2rates.html">CPP second (CPP2) contribution rates, maximums and exemptions</a></li>
                   </ul>
                   <div class="clearfix">&nbsp;</div>
                </div>
