--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -63,10 +63,10 @@
             });
          </script>
 <main role="main" property="mainContentOfPage" class="container">
-<div class="alert alert-danger">
-<h4>Content within this webpage is under development and is not finalized.</h4>
+<div class="alert alert-warning">
+<p>Content is new and it is effective for deductions made <strong>on or after January 1, 2024</strong></p>
+</div>
 
-</div>	
   <nav class="provisional gc-subway">
     <h1 id="gc-document-nav">Calculate payroll deductions and contributions</h1>
     <ul>
