--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -114,20 +114,14 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">Calculate second CPP (CPP2) contributions deductions</h1>
+ <p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong></p>
+                  <ul class="small mrgn-tp-sm">
+ 		   <li><a href="/cra-arc/payroll/calculate/when/cpp2rates.html">CPP second (CPP2) contribution rates, maximums and exemptions</a></li>
+                 </ul>
+
 <div class="alert alert-warning">
 <p>Content is new and it is effective for deductions made <strong>on or after January 1, 2024</strong></p>
 </div>
-
- <div class="col-xs-12">
-               <div class="row">
-                  <p class="pull-left small"><strong>You may be looking for:</strong></p>
-                  <ul class="pull-left mrgn-lft-md list-unstyled small">
-                     <li><a href="/cra-arc/payroll/calculate/when/cpp2rates.html">CPP second (CPP2) contribution rates, maximums and exemptions</a></li>
-                  </ul>
-                  <div class="clearfix">&nbsp;</div>
-               </div>
-            </div>
-
             <p>How to use the CPP2 contributions tables and how to calculate manually the amount to withhold.</p>
           <p><strong>If the employee's province of employment is in Quebec</strong>, you are required to deduct the second Quebec Pension Plan (QPP) contributions and not the CPP2 contributions, refer to: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-pension-plan-contributions/">Québec Pension Plan Contributions | Revenu Québec</a></p>
 			
