--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -167,13 +167,13 @@
               <dt id="dt1">Maximum annual pensionable earnings</dt>
               <dd> This is the maximum pensionable earnings on which the employer and employee are required to contribute to the CPP2 in a year for their employment with that employer.</dd>
               <dt id="dt2">Basic exemption amount</dt>
-              <dd> This is the annual amount on which CPP2 contributions are not required to be made. If an employee will make less than this amount during their annual employment with you, you are not required to withhold CPP contributions. If they are likely to earn more than this amount, you must subtract the portion of the annual exemption applicable to that pay period before calculating the CPP contributions for the period.</dd>
+              <dd> This is the annual amount on which CPP2 contributions are not required to be made. If an employee will make less than this amount during their annual employment with you, you are not required to withhold CPP2 contributions. If they are likely to earn more than this amount, you must subtract the portion of the annual exemption applicable to that pay period before calculating the CPP2 contributions for the period.</dd>
               <dt id="dt3">Maximum contributory earnings</dt>
               <dd> This is the maximum pensionable earnings for the employee less the basic exemption amount.</dd>
               <dt id="dt4">Contribution rate</dt>
               <dd> This is the percentage of the employee's pensionable earnings that both the employer and employee contribute to the CPP2. If the worker is self-employed, they need to pay both the employer and employee contribution up to the self-employed maximum as part of their personal income tax return.</dd>
               <dt id="dt5">Maximum employer and employee contribution</dt>
-              <dd> This amount is the maximum amount that the employee and employer must each pay into the CPP in a year for their employment with that employer.</dd>
+              <dd> This amount is the maximum amount that the employee and employer must each pay into the CPP2 in a year for their employment with that employer.</dd>
               <dt id="dt6">Maximum self-employed contribution</dt>
               <dd> This is the maximum amount a self-employed person needs to pay into the CPP2 each year.</dd>
             </dl>
@@ -182,7 +182,7 @@
       </div>
     </details>
  <ul class="fa-ul mrgn-bttm-lg">
-      <li><span class="fas fa-file-csv mrgn-lft-sm text-muted fa-2x fa-li"></span> The <strong>above</strong> table is available in comma-separated value (CSV) format. Refer to: <a href="/content/dam/cra-arc/serv-info/tax/cpp/cpp-cntrbtn-rts-mxmms-xmptns.csv">CPP contribution rates, maximums and exemptions</a></li>
+      <li><span class="fas fa-file-csv mrgn-lft-sm text-muted fa-2x fa-li"></span> The <strong>above</strong> table is available in comma-separated value (CSV) format. Refer to: <a href="/content/dam/cra-arc/serv-info/tax/cpp/cpp-cntrbtn-rts-mxmms-xmptns.csv">CPP2 contribution rates, maximums and exemptions</a></li>
     </ul>
   <h2 id="h_2">CPP2 basic exemption amount by pay period</h2>
   <div id="ajax-exemption2">
@@ -263,7 +263,7 @@
       <summary>Table legend<span class="wb-inv">CPP2 basic exemption amount by pay period</span></summary>
       <dl class="dl-horizontal">
         <dt id="dd2a">Basic exemption amount</dt>
-        <dd> This is the annual amount on which CPP contributions are not required to be made.  If an employee will make less than this amount during their annual employment with you, you are not required to withhold CPP contributions. If they are likely to earn more than this amount, you must subtract the portion of the annual exemption applicable to that pay period before calculating the CPP contributions for the period.</dd>
+        <dd> This is the annual amount on which CPP2 contributions are not required to be made.  If an employee will make less than this amount during their annual employment with you, you are not required to withhold CPP contributions. If they are likely to earn more than this amount, you must subtract the portion of the annual exemption applicable to that pay period before calculating the CPP2 contributions for the period.</dd>
       </dl>
     </details>
   </div>
@@ -293,12 +293,12 @@
       </dl>
     </div>
   </div>
-  <section id="cpprate" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
+  <section id="cpp2rate" class="mfp-hide modal-dialog modal-content overlay-def modal-xl">
     <header class="modal-header">
-      <h2 class="modal-title">CPP contribution rates, maximums and exemptions</h2>
+      <h2 class="modal-title">CPP2 contribution rates, maximums and exemptions</h2>
     </header>
     <div class="modal-body">
-      <div data-ajax-replace="cpprates.html #ajax-cpprate"></div>
+      <div data-ajax-replace="cpp2rates.html #ajax-cpp2rate"></div>
     </div>
   </section>
   <nav class="mrgn-bttm-lg mrgn-tp-lg">
