--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
@@ -112,7 +112,7 @@
          </ul>
     </li>
     <li><a href="how-submit.html" class="hidden-xs hidden-sm">Submit your claim</a>
-        <a href="how-submit.html#gc-document-nav" class="visible-xs visible-sm">Submit your SR&amp;ED claim</a> 
+        <a href="how-submit.html#gc-document-nav" class="visible-xs visible-sm">Submit your claim</a> 
     </li>
     <li>
       <a href="after.html" class="hidden-xs hidden-sm">After you claim</a>
