--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-2.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-2.html
@@ -74,8 +74,8 @@
       <a href="#gc-document-nav" class="visible-xs visible-sm">What work is eligible</a>
     </li>
     <li>
-      <a href="how.html" class="hidden-xs hidden-sm">How to prepare your SR&amp;ED claim</a>
-      <a href="how.html#gc-document-nav" class="visible-xs visible-sm">How to prepare your SR&amp;ED claim</a>
+      <a href="how.html" class="hidden-xs hidden-sm">How to prepare your claim</a>
+      <a href="how.html#gc-document-nav" class="visible-xs visible-sm">How to prepare your claim</a>
 	  	<ul>
             <li><a href="get-ready.html" class="hidden-xs hidden-sm">Get ready to claim SR&amp;ED</a>
                 <a href="get-ready.html" class="visible-xs visible-sm">Get ready to claim SR&amp;ED</a> 
@@ -98,8 +98,8 @@
             </li>
         </ul>
     </li>
-    <li><a href="how-submit.html" class="hidden-xs hidden-sm">Submit your SR&amp;ED claim</a>
-        <a href="how-submit.html#gc-document-nav" class="visible-xs visible-sm">Submit your SR&amp;ED claim</a> 
+    <li><a href="how-submit.html" class="hidden-xs hidden-sm">Submit your claim</a>
+        <a href="how-submit.html#gc-document-nav" class="visible-xs visible-sm">Submit your claim</a> 
     </li>
     <li>  
       <a href="after.html" class="hidden-xs hidden-sm">After you claim</a>
