--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.old.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.old.html
@@ -86,10 +86,10 @@
       <a href="#gc-document-nav" class="visible-xs visible-sm">What work is eligible</a>
     </li>
     <li>
-      <a href="how.html" class="hidden-xs hidden-sm">How to prepare your SR&amp;ED claim</a>
-      <a href="how.html#gc-document-nav" class="visible-xs visible-sm">How to prepare your SR&amp;ED claim</a>     
+      <a href="how.html" class="hidden-xs hidden-sm">How to prepare your claim</a>
+      <a href="how.html#gc-document-nav" class="visible-xs visible-sm">How to prepare your claim</a>     
 	  	<ul>
-            <li><a href="get-ready.html" class="active" aria-current="page">Get ready to claim SR&ED</a>
+            <li><a href="get-ready.html" class="active" aria-current="page">Get ready to claim</a>
             </li>
             <li><a href="grouping.html" class="hidden-xs hidden-sm">Group work into SR&amp;ED projects</a>
                 <a href="grouping.html#gc-document-nav" class="visible-xs visible-sm">Group work into SR&amp;ED projects</a> 
@@ -111,8 +111,8 @@
             </li>
          </ul>
     </li>
-    <li><a href="how-submit.html" class="hidden-xs hidden-sm">Submit your SR&amp;ED claim</a>
-        <a href="how-submit.html#gc-document-nav" class="visible-xs visible-sm">Submit your SR&amp;ED claim</a> 
+    <li><a href="how-submit.html" class="hidden-xs hidden-sm">Submit your claim</a>
+        <a href="how-submit.html#gc-document-nav" class="visible-xs visible-sm">Submit your claim</a> 
     </li>
     <li>
       <a href="after.html" class="hidden-xs hidden-sm">After you claim</a>
