--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -75,11 +75,11 @@
       <a href="#gc-document-nav" class="visible-xs visible-sm">What work is eligible</a>
     </li>
     <li>
-      <a href="how.html" class="hidden-xs hidden-sm">How to prepare your SR&amp;ED claim</a>
-      <a href="how.html#gc-document-nav" class="visible-xs visible-sm">How to prepare your SR&amp;ED claim</a>
+      <a href="how.html" class="hidden-xs hidden-sm">How to prepare your claim</a>
+      <a href="how.html#gc-document-nav" class="visible-xs visible-sm">How to prepare your claim</a>
 	  	<ul>
-            <li><a href="get-ready.html" class="hidden-xs hidden-sm">Get ready to claim SR&ED</a>
-                <a href="get-ready.html" class="visible-xs visible-sm">Get ready to claim SR&ED</a> 
+            <li><a href="get-ready.html" class="hidden-xs hidden-sm">Get ready to claim</a>
+                <a href="get-ready.html" class="visible-xs visible-sm">Get ready to claim</a> 
             </li>
         	<li><a href="grouping.html" class="active" aria-current="page">Group work into SR&amp;ED projects</a>
             </li>
@@ -100,8 +100,8 @@
             </li>
         </ul>
     </li>
-    <li><a href="how-submit.html" class="hidden-xs hidden-sm">Submit your SR&amp;ED claim</a>
-        <a href="how-submit.html#gc-document-nav" class="visible-xs visible-sm">Submit your SR&amp;ED claim</a> 
+    <li><a href="how-submit.html" class="hidden-xs hidden-sm">Submit your claim</a>
+        <a href="how-submit.html#gc-document-nav" class="visible-xs visible-sm">Submit your claim</a> 
     </li>      
     <li>
       <a href="after.html" class="hidden-xs hidden-sm">After you claim</a>
