--- a/sred/scientific-research-experimental-development-tax-incentive-program/what-are.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/what-are.html
@@ -73,12 +73,12 @@
       <a href="#gc-document-nav" class="visible-xs visible-sm">What work is eligible</a>
     </li>
     <li>
-      <a href="how.html" class="hidden-xs hidden-sm">How to prepare your SR&amp;ED claim</a>
-      <a href="#gc-document-nav" class="visible-xs visible-sm">How to prepare your SR&amp;ED claim</a>
+      <a href="how.html" class="hidden-xs hidden-sm">How to prepare your claim</a>
+      <a href="#gc-document-nav" class="visible-xs visible-sm">How to prepare your claim</a>
     </li>
 
-    <li><a href="how-submit.html" class="hidden-xs hidden-sm">Submit your SR&amp;ED claim</a>
-        <a href="how-submit.html#gc-document-nav" class="visible-xs visible-sm">Submit your SR&amp;ED claim</a> 
+    <li><a href="how-submit.html" class="hidden-xs hidden-sm">Submit your claim</a>
+        <a href="how-submit.html#gc-document-nav" class="visible-xs visible-sm">Submit your claim</a> 
     </li>      
     <li>
       <a href="after.html" class="hidden-xs hidden-sm">After you claim</a>
