--- a/sred/scientific-research-experimental-development-tax-incentive-program/contact-us.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/contact-us.html
@@ -399,7 +399,7 @@
 <section id="select-2" class="hidden alert0 provisional">
 <h2>British Columbia</h2> 
 <p>For SR&ED services in British Columbia, contact the Fraser Valley and Interior Tax Services Office.</p>
-<h3>Fraser Valley Tax Services Office</h3>
+<h3>Fraser Valley and Interior Tax Services Office</h3>
 
 <dl class="dl-horizontal brdr-0">
             <dt>By phone:</dt>
