--- a/sred/scientific-research-experimental-development-tax-incentive-program/contact-us.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/contact-us.html
@@ -466,7 +466,7 @@
 
 <section id="select-13" class="hidden alert0 provisional">
 <h2>Yukon</h2> 
-<p>For SR&ED services in the Yukon, contact the Fraser Valley Tax Services Office.</p>
+<p>For SR&ED services in the Yukon, contact the Fraser Valley and Interior Tax Services Office.</p>
 <h3>Fraser Valley and Interior Tax Services Office</h3>
 
 <dl class="dl-horizontal brdr-0">
