--- a/sred/index.html
+++ b/sred/index.html
@@ -75,7 +75,7 @@
 
 <p>The Scientific Research and Experimental Development (SR&amp;ED) tax incentives are intended to encourage businesses to conduct research and development in Canada.</p>
    <p>Corporations, individuals, trusts, and partners in a partnership who conduct eligible work may be able to claim SR&amp;ED tax incentives for the year.</p>
-   <p>To benefit from the incentives, you must link your eligible work to expenditures you can claim. Then you may deduct the expenditures against your income and earn an investment tax credit (ITC).</p>
+   <p>To benefit from the incentives, you must link your eligible work to expenditures you can claim. Then after making adjustments, you may deduct your pool of deductible expenditures against your income and earn an investment tax credit (ITC).</p>
     <p>Claimants should submit their SR&amp;ED claim with their income tax return for the year.</p>
             
 <nav class="provisional gc-subway">
